change top spacing to fixed height

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 
 #front-page{
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 0.4fr 1fr;
+  grid-template-rows: 120px 1fr 1fr 0.4fr 1fr;
   align-items: center;
   justify-items: center;
 }
